syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;

// 接口类
service UserService {
    rpc query (UserRequest) returns (UserResponse);
}

message UserRequest {
    string name = 1;

}
message UserResponse {
    string name = 1;
    int32 age = 2;
    string address = 3;
}
